# XlsImage

./: .gitignore  README.md  pyproject.toml  test.py
docs/: biff-00eb.md
src/XlsImage/: MSODrawingGroup.py  XlsImage.py  __init__.py  __main__.py
