[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "XlsImage"
version = "0.0.2"
authors = [
  { name="abumpkin", email="forwardslash@foxmail.com" },
]
description = "A small package for extract images from .xls files"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/abumpkin/XlsImage"
"Bug Tracker" = "https://github.com/abumpkin/XlsImage/issues"